migrate jfuse-mac to java 19