@@ -2,13 +2,14 @@ package org.cryptomator.jfuse.mac;
 
 import org.cryptomator.jfuse.api.FuseConnInfo;
 import org.cryptomator.jfuse.mac.extr.fuse_conn_info;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 
 record FuseConnInfoImpl(MemorySegment segment) implements FuseConnInfo {
 
-	public FuseConnInfoImpl(MemoryAddress address, ResourceScope scope) {
+	public FuseConnInfoImpl(MemoryAddress address, MemorySession scope) {
 		this(fuse_conn_info.ofAddress(address, scope));
 	}
 
